wp-manifests/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
  namespace: noad
spec:
  ports:
    - name: "3306"
      port: 3306
      targetPort: 3306
    - name: "33060"
      port: 33060
      targetPort: 33060
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
