wp-manifests/wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
  namespace: noad
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: wordpress
  type: LoadBalancer
status:
  loadBalancer: {}
